--- a/themes/clean_journal/style.css
+++ b/themes/clean_journal/style.css
@@ -1947,80 +1947,115 @@ h2.journal-block-title {
 #open-journal-information-form {
 	overflow: hidden;
 }
-
-#open-journal-information-form #edit-data {
-	padding: 0 20px;
+/* Journal Add label
+----------------------------------------------------------------*/
+#open-journal-information-form label {
 	float: left;
 }
+#open-journal-information-form label .label-help,
+#open-journal-information-form #edit-data #edit-date .fieldset-legend .label-help {
+	width: 12px;
+	height: 12px;
+	display: inline-block;
+	background: url(images/ic-hint.png) no-repeat top right;
+	text-indent: -999em;
+	margin-left: 5px;
+	line-height: 12px;
+}
+/* Journal Add #edit-main
+----------------------------------------------------------------*/
 #open-journal-information-form #edit-main {
 	width: 510px;
 	float: left;
 }
-#open-journal-information-form #edit-main .form-item {
-	width: 470px;
-	padding: 0 20px;
-}
+	#open-journal-information-form #edit-main label {
+		margin-bottom: 10px;
+	}
+	#open-journal-information-form #edit-main .form-item {
+		width: 470px;
+		padding: 0 20px;
+	}
+	#open-journal-information-form #edit-main .form-item-guideline {
+		float: left;
+	}
+		#open-journal-information-form #edit-main .form-item-guideline label {
+			line-height: 13px;
+		}
+		#open-journal-information-form #edit-main .form-item-guideline .form-checkbox {
+			float: left;
+			margin-right: 10px;
+		}
+		
+/* Journal Add #edit-data (side-bar)
+----------------------------------------------------------------*/
 #open-journal-information-form #edit-data {
+	padding: 0 20px;
+	float: left;
 	width: 370px;
 	margin-top: 40px;
 }
-#open-journal-information-form #edit-data h3 {
-	font-size: 22px;
-}
-#open-journal-information-form #edit-data fieldset {
-	border: none;
-	margin-top: 0;
-}
-#open-journal-information-form #edit-data fieldset#edit-group {
-	border: 1px solid #C9C9C9;
-	padding: 25px 10px 20px 0;
-	margin-top: 0;
-	border-radius: 5px;
-	-moz-border-radius: 5px;
-	-webkit-border-radius: 5px;	
-}
-#open-journal-information-form #edit-data #edit-group .fieldset-wrapper {
-	padding: 0;
-}
+	#open-journal-information-form #edit-data h3 {
+		font-size: 22px;
+	}
+	#open-journal-information-form #edit-data fieldset {
+		border: none;
+		margin-top: 0;
+	}
+	#open-journal-information-form #edit-data fieldset#edit-group {
+		border: 1px solid #C9C9C9;
+		padding: 25px 10px 20px 0;
+		margin-top: 0;
+		border-radius: 5px;
+		-moz-border-radius: 5px;
+		-webkit-border-radius: 5px;	
+	}	
+		#open-journal-information-form #edit-data #edit-group .fieldset-wrapper,
+		#open-journal-information-form #edit-data #edit-date {
+			padding: 0;
+		}
+			#open-journal-information-form #edit-data label {
+				margin-left: 10px;
+			}
+			#open-journal-information-form #edit-data .multi-textfield {
+				margin-bottom: 10px;
+			}
 
+#open-journal-information-form #edit-data #edit-date legend {
+	float: left;
+	margin-top: 22px;
+}		
+	#open-journal-information-form #edit-data #edit-date .fieldset-legend {	
+		margin: 0 0 0 10px;
+		padding: 0;
+		position: relative;
+		text-transform: none;
+	}
+#open-journal-information-form #edit-data #edit-date .fieldset-wrapper {
+	float: right;
+	width: 202px;
+}
+	#open-journal-information-form #edit-data #edit-date .fieldset-wrapper .form-item {
+		margin-right: 5px;
+	}
+	#open-journal-information-form #edit-data #edit-date .fieldset-wrapper label {
+		float: none;
+		margin-left: 0;
+	}
+
+/* Journal Add form style
+----------------------------------------------------------------*/	
 #edit-subject-sub,
 #edit-subject-en,
 #edit-creator-en,
 #edit-creator-sub,
 #edit-dc-publisher,
-#edit-dc-contributor,
-#edit-date {
+#edit-dc-contributor {
 	padding-top: 0;
 }
 .form-item-dc-language {
 	margin-bottom: 10px;
 	overflow: hidden;
 }
-#edit-subject-sub legend,
-#edit-subject-en legend,
-#edit-creator-en legend,
-#edit-creator-sub legend,
-#edit-dc-publisher legend,
-#edit-dc-contributor legend,
-#edit-date legend,
-.form-item-dc-language label,
-.form-item-dc-identifier label,
-.form-item-dc-coverage label,
-.form-item-dc-type label,
-.form-item-dc-format label,
-.form-item-dc-right label,
-.form-item-address label {
-	width: 100px;
-	float: left;
-	text-align: right;
-	padding-right: 23px;
-	padding-top: 3px;
-	position: relative;
-}
-#edit-date legend {
-	padding-top: 20px;
-}
-
 .form-item-dc-identifier,
 .form-item-dc-coverage,
 .form-item-dc-type,
@@ -2031,15 +2066,6 @@ h2.journal-block-title {
 	margin-bottom: 0px;
 }
 
-.form-item-dc-identifier label,
-.form-item-dc-type label,
-.form-item-dc-format label,
-.form-item-dc-right label,
-.form-item-address label,
-.form-item-dc-coverage label {
-	width: 100px;
-	padding-right: 0px;
-}
 .form-item-dc-identifier .description,
 .form-item-dc-coverage .description {
 	margin: 10px 0 0 132px !important;
@@ -2052,108 +2078,18 @@ h2.journal-block-title {
 .form-item-description-en {
 	margin-bottom: 20px;
 }
-
-.form-item-dc-language label,
-.form-item-title-en label,
-.form-item-title-sub label,
-.form-item-description-sub label,
-.form-item-description-en label,
-.form-item-dc-identifier label,
-.form-item-dc-coverage label,
-.form-item-dc-type label,
-.form-item-dc-format label,
-.form-item-dc-right label,
-.form-item-address label, {
-	position: relative;
-	float: left;
-}
-
-#edit-subject-sub .fieldset-legend,
-#edit-subject-en .fieldset-legend,
-#edit-creator-en .fieldset-legend,
-#edit-creator-sub .fieldset-legend,
-#edit-dc-publisher .fieldset-legend,
-#edit-dc-contributor .fieldset-legend,
-#edit-date .fieldset-legend {
-	position: relative;
-	padding-left: 0;
-	text-transform: none;
-}
-#edit-subject-sub .fieldset-legend .label-help,
-#edit-subject-en .fieldset-legend .label-help,
-#edit-creator-en .fieldset-legend .label-help,
-#edit-creator-sub.fieldset-legend .label-help,
-#edit-dc-publisher .fieldset-legend .label-help,
-#edit-dc-contributor .fieldset-legend .label-help,
-#edit-date .fieldset-legend .label-help,
-#edit-dc-type .fieldset-legend .label-help,
-#edit-dc-format .fieldset-legend .label-help,
-#edit-dc-right .fieldset-legend .label-help,
-.form-item-dc-language label .label-help,
-.label-help {
-	text-align: justify;
-	text-indent: -999em;
-	overflow: hidden;
-	display: block;
-	width: 12px;
-	height: 12px;
-	background: url(images/ic-hint.png) no-repeat /* center */top right;
-	position: absolute;
-	top: 3px;
-	right: -16px;
-}
-.form-item-dc-language label .label-help {
-	top: 7px;
-	right: 5px;
-}
-
-.form-item-dc-identifier label .label-help,
-.form-item-dc-type label .label-help,
-.form-item-dc-format label .label-help,
-.form-item-dc-right label .label-help,
-.form-item-address label .label-help,
-.form-item-dc-coverage label .label-help {
-	top: 7px;
-	margin-right: -2px;
-}
-
-.form-item-title-sub label,
-.form-item-title-en label {
-  position: relative;
-}
-.form-item-title-sub label .label-help,
-.form-item-title-en label .label-help {
-  left: 90px;
-}
-
-.form-item-description-sub label,
-.form-item-description-en label {
-  position: relative;
-}
-.form-item-description-sub label .label-help,
-.form-item-description-en label .label-help {
-  left: 115px;
-}
-
-#edit-subject-sub .fieldset-wrapper,
-#edit-subject-en .fieldset-wrapper,
-#edit-creator-en .fieldset-wrapper,
-#edit-creator-sub .fieldset-wrapper,
-#edit-dc-publisher .fieldset-wrapper,
-#edit-dc-contributor .fieldset-wrapper,
-#edit-date .fieldset-wrapper,
-.form-item-dc-language #edit-dc-language,
-.form-item-dc-coverage #edit-dc-coverage,
-.form-item-dc-identifier #edit-dc-identifier,
-.form-item-dc-type #edit-dc-type,
-.form-item-dc-format #edit-dc-format,
-.form-item-dc-right #edit-dc-right,
-.form-item-address #edit-address {
-	width: 225px;
+#edit-data .form-text,
+#edit-data .form-textarea,
+#edit-data #edit-dc-language {
 	float: right;
+	width: 180px;
 }
-.form-item-dc-language #edit-dc-language {
-	margin-top: 3px;
+#edit-data #edit-dc-language {
+	width: 207px;
+}
+#edit-data .add-multi-textfield {
+	float: left;
+	margin-left: 156px;
 }
 	#edit-subject-sub .fieldset-wrapper .form-item,
 	#edit-subject-en .fieldset-wrapper .form-item,
@@ -2171,12 +2107,7 @@ h2.journal-block-title {
 		margin-bottom: 0;
 		padding-top: 0;
 	}
-		#edit-subject-sub .fieldset-wrapper .form-item .multi-textfield,
-		#edit-subject-en .fieldset-wrapper .form-item .multi-textfield,
-		#edit-creator-en .fieldset-wrapper .form-item .multi-textfield,
-    #edit-creator-sub .fieldset-wrapper .form-item .multi-textfield,
-		#edit-dc-publisher .fieldset-wrapper .form-item .multi-textfield,
-		#edit-dc-contributor .fieldset-wrapper .form-item .multi-textfield,
+		#edit-data .multi-textfield,
 		.form-item-address .form-textarea,
 		.form-item-dc-identifier #edit-dc-identifier,
 		.form-item-dc-coverage #edit-dc-coverage,
@@ -2188,7 +2119,7 @@ h2.journal-block-title {
 		.form-item-title-sub .form-text,
 		.form-item-description-sub .form-textarea,
 		.form-item-description-en .form-textarea {
-			width: 200px;
+			width: 180px;
 			padding: 2px 10px 2px 10px;
 			border: 1px solid #f1f1f1;
 			background: #f1f1f1;
@@ -2213,20 +2144,14 @@ h2.journal-block-title {
 		.form-item-title-sub .form-text {
 			width: 450px;
 		}
-		.form-item-title-en label,
-    .form-item-title-sub label,
-		.form-item-description-sub label,
-		.form-item-description-en label {
-			margin-bottom: 10px;
-		}
 		.form-item-dc-identifier #edit-dc-identifier,
 		.form-item-dc-coverage #edit-dc-coverage,
     .form-item-dc-type #edit-dc-type,
     .form-item-dc-format #edit-dc-format,
-    .form-item-dc-right #edit-dc-right,
-    .form-item-address #edit-address {
+    .form-item-dc-right #edit-dc-right {
 			margin-right: 5px;
 		}
+		
 #edit-date .form-type-select,
 #edit-date .fieldset-wrapper span {
 	float: left;
@@ -2280,7 +2205,7 @@ h2.journal-block-title {
   margin-bottom: 10px;
 }
 .form-item-address #edit-address {
-  width: 220px !important;
+  width: 202px !important;
 }
 .form-item-address .grippie {
   display: none;
