--- a/themes/clean_journal/style.css
+++ b/themes/clean_journal/style.css
@@ -3025,3 +3025,9 @@ ul.journal-informal-approve-list li .user-name-wrapper {
 .form-item input.error, .form-item textarea.error, .form-item select.error {
 border: 2px solid red !important;
 }
+
+
+/* hide menu */
+.page-user-password ul.primary {
+    display: none;
+}
