--- a/themes/clean_journal/style.css
+++ b/themes/clean_journal/style.css
@@ -1607,7 +1607,24 @@ input.form-submit:hover {
 		cursor: pointer;
 		text-decoration: none;
 	}
-		#journal-list .journal-item .status1 {
+    #journal-list .journal-item .status0 {
+      background-color: #55b0d6;
+    }
+    #journal-list .journal-item .status4 {
+      background-color: #C05D63;
+    }
+    #journal-list .journal-item .status5,
+		#journal-list .journal-item .status1,
+    #journal-list .journal-item .status6,
+    #journal-list .journal-item .status7,
+    #journal-list .journal-item .status8,
+    #journal-list .journal-item .status9,
+    #journal-list .journal-item .status10,
+    #journal-list .journal-item .status11,
+    #journal-list .journal-item .status12,
+    #journal-list .journal-item .status13,
+    #journal-list .journal-item .status101,
+    #journal-list .journal-item .status102 {
 			background-color: #c6aadd;
 		}
 		#journal-list .journal-item .status2 {
@@ -1616,6 +1633,7 @@ input.form-submit:hover {
 		#journal-list .journal-item .status3 {
 			background-color: #69c5ae;
 		}
+
 		#journal-list .journal-item .statusreject {
 			background-color: #ff5f65;
 		}
@@ -2294,7 +2312,37 @@ h2.journal-block-title {
 #open-journal-discussion-form .form-actions {
 	padding: 0 20px;
 }
+#open-journal-discussion-form .form-item-roles {
 
+}
+#open-journal-discussion-form .form-item-roles .form-type-checkbox {
+  width: 20%;
+  display: inline-block;
+  padding-left: 0
+}
+
+#open-journal-discussion-form  .select-roles-control {
+  font-size: 0.8em;
+  color: #777;
+}
+#open-journal-discussion-form  .select-roles-control span {
+  text-decoration: underline;
+}
+#open-journal-discussion-form label[for=edit-roles] {
+  margin-bottom: 0;
+}
+
+#open-journal-discussion-form .form-item-template {
+  background-color: #efefef;
+  padding: 10px 20px;
+  margin-bottom: 0px;
+  border: solid 1px #efefef;
+}
+
+.select-template-wrapper {
+  border: solid 1px #efefef;
+  padding-top: 20px;
+}
 /* Discussion List
 ----------------------------------------------------------------*/
 .journal-discussion-list-block {
@@ -2682,18 +2730,54 @@ h3.people-section-title {
 .sidebar-status-block .status-disabled .status-number {
 	background-color: #dedede;
 }
+
+/* Information review */
 .sidebar-status-block .status-active .discussion-sidebar-status-0 {
 	background-color: #55b0d6;
 }
 .sidebar-status-block .status-active.current .discussion-sidebar-status-0 {
 	border: 5px solid #4084a0;
 }
-.sidebar-status-block .status-active .discussion-sidebar-status-1 {
+
+/* Editor first view */
+.sidebar-status-block .status-active .discussion-sidebar-status-4 {
+  background-color: #C05D63;
+}
+.sidebar-status-block .status-active.current .discussion-sidebar-status-4 {
+  border: 5px solid #894247;
+}
+
+/* Document review */
+.sidebar-status-block .status-active .discussion-sidebar-status-5,
+.sidebar-status-block .status-active .discussion-sidebar-status-1,
+.sidebar-status-block .status-active .discussion-sidebar-status-6,
+.sidebar-status-block .status-active .discussion-sidebar-status-7,
+.sidebar-status-block .status-active .discussion-sidebar-status-8,
+.sidebar-status-block .status-active .discussion-sidebar-status-9,
+.sidebar-status-block .status-active .discussion-sidebar-status-10,
+.sidebar-status-block .status-active .discussion-sidebar-status-11,
+.sidebar-status-block .status-active .discussion-sidebar-status-12,
+.sidebar-status-block .status-active .discussion-sidebar-status-13,
+.sidebar-status-block .status-active .discussion-sidebar-status-101,
+.sidebar-status-block .status-active .discussion-sidebar-status-102 {
 	background-color: #c6aadd;
 }
-.sidebar-status-block .status-active.current .discussion-sidebar-status-1 {
+.sidebar-status-block .status-active.current .discussion-sidebar-status-5,
+.sidebar-status-block .status-active.current .discussion-sidebar-status-1,
+.sidebar-status-block .status-active.current .discussion-sidebar-status-6,
+.sidebar-status-block .status-active.current .discussion-sidebar-status-7,
+.sidebar-status-block .status-active.current .discussion-sidebar-status-8,
+.sidebar-status-block .status-active.current .discussion-sidebar-status-9,
+.sidebar-status-block .status-active.current .discussion-sidebar-status-10,
+.sidebar-status-block .status-active.current .discussion-sidebar-status-11,
+.sidebar-status-block .status-active.current .discussion-sidebar-status-12,
+.sidebar-status-block .status-active.current .discussion-sidebar-status-13,
+.sidebar-status-block .status-active.current .discussion-sidebar-status-101,
+.sidebar-status-block .status-active.current .discussion-sidebar-status-102 {
 	border: 5px solid #9982ac;
 }
+
+
 .sidebar-status-block .status-active .discussion-sidebar-status-2 {
 	background-color: #cd935e;
 }
@@ -2712,8 +2796,13 @@ h3.people-section-title {
 .sidebar-status-block .status-active.finish .discussion-sidebar-status-3 {
 	margin: 0 10px 0 0;
 }
+.approve-popup-button {
+  line-height: 30px;
+}
 #open-journal-approve-sidebar-form .form-submit,
+#approve_popup_bottom,
 #reject_bottom {
+  font-family: "Lucida Grande", Verdana, sans-serif;
 	font-size: 10px;
 	padding: 5px 10px;
 	background-color: #888;
@@ -2724,6 +2813,11 @@ h3.people-section-title {
 	color: #FFF;
 	text-transform: uppercase;
 }
+
+.approve-plus-popup textarea {
+  height: 225px;
+}
+
 #open-journal-approve-sidebar-form .form-submit:hover,
 #reject_bottom:hover {
 	background-color: #55b0d6;
