--- a/themes/clean_journal/style.css
+++ b/themes/clean_journal/style.css
@@ -1135,21 +1135,35 @@ body {
 	z-index: 10;
 	list-style: none;
 	margin: 0;
+
+  -webkit-box-shadow: 2px 2px 8px -1px rgba(0,0,0,0.57);
+  -moz-box-shadow: 2px 2px 8px -1px rgba(0,0,0,0.57);
+  box-shadow: 2px 2px 8px -1px rgba(0,0,0,0.57);
+
 }
 .user-manage .user-dropdown ul li {
 	line-height: 1.5em;
 	text-align: right;
 	width: 130px;
-	padding: 5px;
 	padding: 0;
-	border-bottom: 1px solid #ccc;
 }
 .user-manage .user-dropdown ul li a {
 	background: #FFF;
 	display: block;
 	width: 120px;
-	padding: 5px;
+	padding: 5px 10px;
+  border-bottom: 1px solid #ccc;
 }
+.user-manage .user-dropdown ul li.switch-role-item a{
+  background-color: #FCF3CF;
+}
+
+.user-manage .user-dropdown ul li.switch-role-heading a{
+  text-decoration: none;
+  background-color: #F1E5B4;
+}
+
+
 .user-manage .user-dropdown img {
   border-radius: 50%;
 	-moz-border-radius: 50%;
