--- a/themes/clean_journal/style.css
+++ b/themes/clean_journal/style.css
@@ -2485,7 +2485,10 @@ h2.journal-block-title {
 		.journal-discussion-list-item .discus-title a:hover {
 			text-decoration: none;
 		}
-
+  .latest-file-link {
+    position: absolute;
+    top: 20px;
+  }
 /* Discussion Detail
 ----------------------------------------------------------------*/
 .discussion-block h3 {
