--- a/themes/clean_journal/style.css
+++ b/themes/clean_journal/style.css
@@ -2895,6 +2895,7 @@ h3.people-section-title {
 #reject_bottom,
 #withdraw_bottom {
   font-family: "Lucida Grande", Verdana, sans-serif;
+}
 
 .approve-plus-popup textarea {
   height: 150px;
